[tool.poetry]
name = "prosushi-knowledge-base"
version = "0.1.0"
description = ""
authors = ["Danil Maximov <bazinga.mail@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
